--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,7 +17,7 @@
         <item
             android:id="@+id/today_history"
             android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Today's History" />
+            android:title="History" />
         <item
             android:id="@+id/cancel_bet"
             android:icon="@android:drawable/ic_menu_slideshow"
