--- a/app/src/main/res/layout/activity_notification_.xml
+++ b/app/src/main/res/layout/activity_notification_.xml
@@ -2,15 +2,15 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="250dp"
+    android:layout_width="250dp"
+    android:layout_height="150dp"
     android:fitsSystemWindows="true"
     tools:context="bidding.example.com.bidding.Notification_Activity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.NoActionBar">
 
     <!--    <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
