--- a/app/src/main/res/menu/custom_menu.xml
+++ b/app/src/main/res/menu/custom_menu.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Login">
     <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="Logout"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/game_2"
         android:orderInCategory="100"
-        android:title="Game-2"
+        android:title="@string/Cricket"
         app:showAsAction="always" />
 </menu>
