--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="Logout"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/game_1"
+        android:orderInCategory="100"
+        android:title="@string/Lottery"
+        app:showAsAction="always" />
+
 </menu>
