--- a/app/src/main/res/layout/fragment_multiple__bet.xml
+++ b/app/src/main/res/layout/fragment_multiple__bet.xml
@@ -54,9 +54,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.4"
                 android:text=""
+                android:textSize="14dp"
                 android:gravity="center"
                 android:textColor="@color/textColor"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:textStyle="bold" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <ScrollView
