--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -58,7 +58,9 @@
                 android:text=""
                 android:gravity="center"
                 android:textColor="@color/textColor"
-                android:layout_gravity="center"/>
+                android:textSize="14dp"
+                android:layout_gravity="center"
+                android:textStyle="bold" />
         </LinearLayout>
         </android.support.v7.widget.CardView>
     <ScrollView
