--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentTop="true">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="30dp"
             android:orientation="horizontal"
             android:weightSum="4">
                 <TextView
@@ -28,6 +28,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.6"
                     android:text="04:00"
+                    android:textSize="15sp"
                     android:textColor="@color/textColor"
                     android:gravity="center"
                     android:layout_gravity="center"/>
@@ -36,8 +37,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="Current Session:03:30 pm"
+                android:text="Current Draw:03:30 pm"
                 android:textColor="@color/textColor"
+                android:textSize="15sp"
                 android:paddingLeft="5dp"
                 android:gravity="left"
                 android:layout_gravity="center"/>
@@ -58,7 +60,7 @@
                 android:text=""
                 android:gravity="center"
                 android:textColor="@color/textColor"
-                android:textSize="14dp"
+                android:textSize="15sp"
                 android:layout_gravity="center"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -154,7 +156,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:hint="Enter Amount"
+                                    android:hint="Enter Chips"
                                     android:gravity="center"
                                     android:textColor="@color/textColor"
                                     android:layout_gravity="center"
@@ -181,7 +183,7 @@
                                 <TextView
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:hint="Return Amount:"
+                                    android:hint="Return Chips:"
                                     android:gravity="right"
                                     android:textColor="@color/textColor"
                                     android:layout_gravity="center"
@@ -271,7 +273,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:hint="Enter Amount"
+                        android:hint="Enter Chips"
                         android:gravity="center"
                         android:textColor="@color/textColor"
                         android:layout_gravity="center"
@@ -297,7 +299,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:hint="Return Amount:"
+                            android:hint="Return Chips:"
                             android:gravity="right"
                             android:textColor="@color/textColor"
                             android:layout_gravity="center"
@@ -388,7 +390,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:hint="Enter Amount"
+                        android:hint="Enter Chips"
                         android:gravity="center"
                         android:textColor="@color/textColor"
                         android:layout_gravity="center"
@@ -414,7 +416,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:hint="Return Amount:"
+                            android:hint="Return Chips:"
                             android:gravity="right"
                             android:textColor="@color/textColor"
                             android:layout_gravity="center"
@@ -460,12 +462,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
-            <TextView
+
+                <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:gravity="center"
                 android:textColor="@color/textColor"
+                    android:id="@+id/txtprogress"
                 android:layout_gravity="center"/>
 <RelativeLayout
     android:layout_width="match_parent"
@@ -482,6 +486,8 @@
                     android:progressDrawable="@drawable/myprogressbar"
                     android:layout_centerInParent="true"
                     />-->
+
+
     <ProgressBar
         android:id="@+id/ProgressBar01"
         style="@style/CustomProgressBar"
