--- a/app/src/main/res/layout/fragment_multiple__bet.xml
+++ b/app/src/main/res/layout/fragment_multiple__bet.xml
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/final_result_tile_holder"
         android:layout_below="@+id/card_view1"
-        >
+        android:id="@+id/scrollView3">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -355,13 +355,22 @@
         </HorizontalScrollView>
 
       </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/single_bet_total"
+                    android:layout_gravity="center" />
+
                 <Button
                     android:id="@+id/btnFirstBet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Place Bet"
                     android:layout_gravity="center"/>
-    </LinearLayout>
+
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <!--second digit single-->
@@ -650,6 +659,15 @@
                 </TableLayout>
             </HorizontalScrollView>
         </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/second_bet_total"
+                    android:layout_gravity="center"/>
+
                 <Button
                     android:id="@+id/btnSecondBet"
                     android:layout_width="wrap_content"
@@ -968,6 +986,14 @@
                         </TableLayout>
                     </HorizontalScrollView>
                 </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/jodi_bets_total"
+                    android:layout_gravity="center"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -1046,6 +1072,5 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
-
 
 </RelativeLayout>
